<resources>
    <string-array name="categories" >
        <item>Inspirational</item>
        <item>Calming</item>
        <item>Horror</item>
        <item>Weird</item>
        <item>Beautiful</item>
    </string-array>
    <string name="app_name">Project 3</string>
    <string name="sign_up_link_name">Don\'t have an account? <b><u>Create one</u></b></string>
    <string name="logout">Logout</string>
    <string name="test">Test</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_post">Add Post</string>
    <string name="title">Title:</string>
    <string name="category">Category:</string>
    <string name="username_field">Username:</string>
    <string name="image_url">Image URL:</string>
    <string name="id">Id:</string>
    <string name="_0">0</string>
    <string name="title_of_post">Title of Post</string>
    <string name="category_of_post">Category of Post</string>
    <string name="author_of_post">Author of Post</string>
    <string name="url_of_image">URL of Image</string>
    <string name="img_url">Image url</string>
    <string name="button">Cancel</string>
    <string name="textview">Delete Account?</string>
    <string name="name">username</string>
    <string name="DeleteAccountBtn">Delete Account</string>
    <string name="confirm_password">confirm Password</string>
    <string name="deleteAccText">Want to delete your account? <b><u>Click Here</u></b></string>
</resources>
